test fix overflow mobile

--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ a {
 .header__h1 {
   position: relative;
   grid-columns: 1 / 2;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   font-size: 3rem;
   margin-left: 2.5rem;
   margin-top: 0.3rem; }
@@ -78,13 +78,14 @@ a {
     transform: scale(1.3); } }
 .header__button--hover:hover {
   transition: 0.5s;
-  color: transparent; }
+  color: rgba(0, 0, 0, 0); }
 
 .figure {
   display: flex;
   position: absolute;
   height: 100vh;
-  max-height: 100%; }
+  max-height: 100%;
+  overflow: hidden; }
   .figure .figure__img {
     display: inline-block;
     position: relative;
@@ -328,7 +329,7 @@ a {
   position: absolute;
   display: grid;
   grid-template-columns: 1fr 1fr 1.2fr;
-  background-color: transparent;
+  background-color: rgba(0, 0, 0, 0);
   width: 100%;
   max-width: 100%;
   z-index: 1; }
